--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
   "name": "ulohy",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
-  "dependencies": {
-    "bootstrap": "^3.3.7",
-    "react": "^15.6.1",
-    "react-bootstrap": "^0.31.2",
-    "react-dom": "^15.6.1",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.11"
-  },
+  "dependencies": {},
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "jest",
+    "test:watch": "npm test -- --watch"
   },
   "devDependencies": {
-    "enzyme": "^2.9.1",
+    "babel-jest": "^20.0.3",
+    "babel-preset-env": "^1.6.0",
     "jest": "^20.0.4",
-    "react-addons-test-utils": "^15.6.0",
-    "react-test-renderer": "^15.6.1"
+    "regenerator-runtime": "^0.11.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js?$": "babel-jest"
+    }
   }
 }
