--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:watch": "npm test -- --watch"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-jest": "^20.0.3",
     "babel-preset-env": "^1.6.0",
     "jest": "^20.0.4",
