--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "ulohy",
   "version": "0.2.0",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-scripts": "^1.0.13"
+  },
   "scripts": {
     "test": "jest",
-    "test:watch": "npm test -- --watch"
+    "test:watch": "npm test -- --watch",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "babel-jest": "^20.0.3",
