--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "plugins": [
-    "react"
+    "react", "jest"
   ],
   "extends": ["vacuumlabs"],
   "parserOptions": {
@@ -12,6 +12,7 @@
   },
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "jest/globals": true
   }
 }
