--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-env": "^1.6.0",
     "eslint": "^4.6.1",
     "eslint-config-vacuumlabs": "^1.3.4",
+    "eslint-plugin-jest": "^21.1.0",
     "eslint-plugin-react": "^7.3.0",
     "jest": "^20.0.4",
     "regenerator-runtime": "^0.11.0"
